[metadata]
name = bbpyp
version = 0.0.2
url=https://github.com/BloggerBust/bbpyp
description=BloggerBust Python Projects common packages
long_description = file: README.md
long_Description_Content_Type = text/markdown; charset=UTF-8; CommonMark
author = Trevor Wilson
author_email = trevor.wilson@bloggerbust.ca
license = Apache License v2.0
license_file = LICENSE-2.0.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
keywords =
    Blogger Bust
    state machine
    combinator
    lexical
    interpreter
    message bus

[options]
zip_safe = False
python_requires = >=3.6,<3.8
namespace_packages =
    bbpyp

install_requires =
    dependency-injector==3.14.5
    trio==0.13.0

[options.packages.find]
include =
    bbpyp.*

[options.extras_require]
dev =
    mock==3.0.5
    autopep8==1.3.2
dist =
    twine==3.1.1
    wheel==0.34.2
