[metadata]
name = bbpyp
version = attr: bbpyp.__nspkg_meta__.__version__
url=https://github.com/BloggerBust/bbpyp
project_urls =
    Source = https://github.com/BloggerBust/bbpyp
    Issues = https://github.com/BloggerBust/bbpyp/issues
description=BloggerBust Python Projects common packages
long_description = file: README.md
long_Description_Content_Type = text/markdown; charset=UTF-8; CommonMark
author = Trevor Wilson
author_email = trevor.wilson@bloggerbust.ca
license = Apache License v2.0
license_file = LICENSE-2.0.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
keywords =
    Blogger Bust
    state machine
    combinator
    lexical
    interpreter
    message bus

[options]
zip_safe = False
python_requires = >=3.6,<3.8
install_requires =
    dependency-injector>=3.14.5
    trio
namespace_packages =
    bbpyp
packages = find_namespace:

[options.packages.find]
include =
    bbpyp
    bbpyp.*
